@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.c,v 1.77.2.31 2003/03/05 20:59:38 mike Exp $"
+ * "$Id: conf.c,v 1.77.2.32 2003/03/17 20:13:51 mike Exp $"
  *
  *   Configuration routines for the Common UNIX Printing System (CUPS).
  *
@@ -673,11 +673,10 @@ ReadConfiguration(void)
   StartServer();
 
  /*
-  * Check for queued jobs...
+  * Load queued jobs...
   */
 
   LoadAllJobs();
-  CheckJobs();
 
   return (1);
 }
@@ -2197,5 +2196,5 @@ CDSAGetServerCerts(void)
 
 
 /*
- * End of "$Id: conf.c,v 1.77.2.31 2003/03/05 20:59:38 mike Exp $".
+ * End of "$Id: conf.c,v 1.77.2.32 2003/03/17 20:13:51 mike Exp $".
  */
